--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
+    "install:all": "npm install && cd client && npm install && cd ../server && npm install",
+    "build:server": "cd server && npm run build",
+    "build:client": "cd client && npm run build",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
