--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ Thumbs.db
 prisma/*.db
 prisma/*.db-journal
 
+# Build outputs
+/server/dist/
+/client/dist/
+
 # Debug
 npm-debug.log*
 yarn-debug.log*
